--- a/Website/data/events/1001.yaml
+++ b/Website/data/events/1001.yaml
@@ -1,8 +1,8 @@
-weight: 4
-title: "Secure Your SDLC using OWASP SAMM - ASAP!"
-date: "October 19th"
+weight: 1
+title: "OWASP SAMM 2: Your Dynamic Software Security Journey"
+date: "October 1st"
 url: "https://events.bizzabo.com/OWASPGlobalAppSec/agenda/session/315906"
 image: "/img/events/GlobalAppSec2020.png"
-type: "Training"
+type: "Presentation"
 presenter: "John Ellingsworth"
 
