--- a/Website/data/events/1019.yaml
+++ b/Website/data/events/1019.yaml
@@ -1,8 +1,8 @@
-weight: 2
-title: "OWASP SAMM 2: Your Dynamic Software Security Journey"
-date: "October 1st"
+weight: 3
+title: "Secure Your SDLC using OWASP SAMM - ASAP!"
+date: "October 19th"
 url: "https://events.bizzabo.com/OWASPGlobalAppSec/agenda/session/315906"
 image: "/img/events/GlobalAppSec2020.png"
-type: "Presentation"
+type: "Training"
 presenter: "John Ellingsworth"
 
