Adds watch on demand link for 1001 event

--- a/Website/data/events/1001.yaml
+++ b/Website/data/events/1001.yaml
@@ -4,5 +4,7 @@ date: "October 1st"
 url: "https://events.bizzabo.com/OWASPGlobalAppSec/agenda/session/315906"
 image: "/img/events/GlobalAppSec2020.png"
 type: "Presentation"
+url2: "https://events.bizzabo.com/OWASPGlobalAppSec/agenda"
+url2text: "Still available on demand"
 presenter: "John Ellingsworth"
 
