--- a/Website/config/_default/config.toml
+++ b/Website/config/_default/config.toml
@@ -2,22 +2,6 @@ baseURL = "https://owaspsamm.org/"
 title = "OWASP SAMM"
 theme = "hugo-universal-theme"
 
-languageCode = "en-us"
-# Site language. Available translations in the theme's `/i18n` directory.
-defaultContentLanguage = "en"
-[languages]
-  [languages.en]
-    languageName = "English"
-    weight = 1
-    contentDir = "content/en"
-  [languages.es]
-    languageName = "Español"
-    weight = 2
-    contentDir = "content/es"
-
-
-
-
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
@@ -295,3 +279,22 @@ paginate = 10
 
 [markup.goldmark.renderer]
     unsafe = true
+
+#### Language section ####
+
+languageCode = "en-us"
+# Site language. Available translations in the theme's `/i18n` directory.
+defaultContentLanguage = "en"
+[languages]
+  [languages.en]
+    languageName = "English"
+    weight = 1
+    contentDir = "content/en"
+  [languages.es]
+    languageName = "Español"
+    weight = 2
+    contentDir = "content/es"
+
+
+
+
