Fixes download link for tools of the trade

--- a/Website/data/sud/07_tools.yaml
+++ b/Website/data/sud/07_tools.yaml
@@ -1,7 +1,7 @@
 weight: 7
 youtubeUrl: "https://www.youtube.com/watch?v=3Zg24upNDIw"
-downloadUrl: "samm-tools-of-the-trade"
-url: "/presentations/OWASP_SAMM_Tools_of_the_Trade.pptx"
+downloadUrl: "/presentations/OWASP_SAMM_Tools_of_the_Trade.pptx"
+url: "samm-tools-of-the-trade"
 name: "OWASP SAMM: Tools of the Trade"
 presenter: "John Ellingsworth"
 
