--- a/Website/data/events/1001.yaml
+++ b/Website/data/events/1001.yaml
@@ -1,10 +1,10 @@
 weight: 1
-title: "OWASP SAMM 2: Your Dynamic Software Security Journey"
-date: "October 1st"
-url: "https://events.bizzabo.com/OWASPGlobalAppSec/agenda/session/315906"
-image: "/img/events/GlobalAppSec2020.png"
+title: "OWASP SAMM: Status and Roadmap"
+date: "February 11th"
+url: "https://appsec.org.nz/conference/speakers.html#owasp-samm-status-and-roadmap"
+image: "/img/events/AppSecNZ21.png"
 type: "Presentation"
-url2: "https://events.bizzabo.com/OWASPGlobalAppSec/agenda"
-url2text: "Still available on demand"
+url2: "https://events.humanitix.com/appsecnz-conference"
+url2text: "Registration"
 presenter: "John Ellingsworth"
 
