--- a/Website/config/_default/config.toml
+++ b/Website/config/_default/config.toml
@@ -154,9 +154,9 @@ paginate = 10
 
 [params]
     viewMorePostLink = "/blog/"
-    author = "DevCows"
-    defaultKeywords = ["devows", "hugo", "go"]
-    defaultDescription = "Site template made by devcows using hugo"
+    author = "OWASP SAMM"
+    defaultKeywords = ["owasp", "samm", "maturity", "model", "software"]
+    defaultDescription = "Measure and improve your organization's software security posture"
 
     # Google Maps API key (if not set will default to not passing a key.)
     # googleMapsApiKey = "AIzaSyCFhtWLJcE30xOAjcbSFi-0fnoVmQZPb1Y"
