--- a/Website/data/clients/microfocus.yaml
+++ b/Website/data/clients/microfocus.yaml
@@ -1,3 +1,4 @@
 name: "microfocus"
-image: "/img/clients/fortify_medium.png"
+image180: "/img/clients/fortify_180.png"
+image200: "/img/clients/fortify_200.png"
 url: "http://www.microfocus.com/en-us/solutions/application-security"
