--- a/Website/data/clients/mindedsecurity.yaml
+++ b/Website/data/clients/mindedsecurity.yaml
@@ -1,3 +1,4 @@
 name: "minded security"
-image: "/img/clients/minded_security_medium.png"
+image180: "/img/clients/imq_minded_security_180.png"
+image200: "/img/clients/imq_minded_security_200.png"
 url: "https://www.mindedsecurity.com/"
