--- a/Website/data/clients/nccgroup.yaml
+++ b/Website/data/clients/nccgroup.yaml
@@ -1,3 +1,4 @@
 name: "ncc group"
-image: "/img/clients/nccgroup_medium.png"
+image180: "/img/clients/ncc_group_180.png"
+image200: "/img/clients/ncc_group_200.png"
 url: "https://www.nccgroup.com/"
