--- a/Website/data/clients/pwc.yaml
+++ b/Website/data/clients/pwc.yaml
@@ -1,3 +1,4 @@
 name: "pwc"
-image: "/img/clients/pwc_medium.png"
+image180: "/img/clients/pwc_180.png"
+image200: "/img/clients/pwc_200.png"
 url: "https://www.pwc.com/"
