--- a/Website/data/clients/securityinnovation.yaml
+++ b/Website/data/clients/securityinnovation.yaml
@@ -1,3 +1,4 @@
 name: "security innovation"
-image: "/img/clients/security_innovation_medium.png"
+image180: "/img/clients/security_innovation_180.png"
+image200: "/img/clients/security_innovation_200.png"
 url: "https://www.securityinnovation.com/"
