Creates testimonials section and page

--- a/Website/config/_default/config.toml
+++ b/Website/config/_default/config.toml
@@ -63,6 +63,13 @@ paginate = 10
     weight = 7
 
 [[menu.main]]
+    name = "Testimonials"
+    parent = "community"
+    url  = "/testimonials/"
+    weight = 8
+
+
+[[menu.main]]
     name = "Guidance"
     identifier = "guidance"
     url  = ""
@@ -239,12 +246,14 @@ paginate = 10
     # For more informtion take a look at the README.
 
 [params.testimonials]
-    enable = false
+    enable = true
     # All testimonials are defined in their own files. You can find example items
     # at 'exampleSite/data/testimonials'.
     # For more informtion take a look at the README.
     title = "Testimonials"
-    subtitle = "We have worked with many clients and we always like to hear they come out from the cooperation happy and satisfied. Have a look what our clients said about us."
+    subtitle = "We always like to hear about our users' experience with SAMM. Have a look what some of them said."
+    link_url = "/testimonials"
+    link_text = "See more"
 
 [params.see_more]
     enable = true
