--- a/Website/data/testimonials/2.yaml
+++ b/Website/data/testimonials/2.yaml
@@ -1,4 +1,4 @@
-text: "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections."
-name: "John McIntyre"
-position: "CEO, TransTech"
-avatar: "img/testimonials/person-2.jpg"
+text: "When it came to evaluating product development environments, HP’s scale and density presented a tough challenge for us. OpenSAMM has proved to be an invaluable tool to baseline our current SDL maturity and measure onward improvements. Importantly, we are able to easily demonstrate our current capability level vis-à-vis industry standards and provide compelling business cases for our future investment portfolio."
+name: "Brian Hanson"
+position: "Senior Security Architect, HP"
+avatar: "img/testimonials/BrianHanson.jpg"
