--- a/Website/data/testimonials/3.yaml
+++ b/Website/data/testimonials/3.yaml
@@ -1,4 +1,4 @@
-text: "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections."
-name: "John McIntyre"
-position: "CEO, TransTech"
-avatar: "img/testimonials/person-3.png"
+text: "UniSystems has integrated the OpenSAMM framework into its certified by ISO 27001:2013 Information Security Management System (ISMS) and adopts it throughout the development lifecycle."
+name: "Andreas Athanasoulias"
+position: "Information Security Officer & Services Team Leader, UniSystems S.A."
+avatar: "img/testimonials/Andreas.jpg"
