Updates text in testimonials

--- a/Website/data/testimonials/2.yaml
+++ b/Website/data/testimonials/2.yaml
@@ -1,4 +1,4 @@
-text: "When it came to evaluating product development environments, HP’s scale and density presented a tough challenge for us. OpenSAMM has proved to be an invaluable tool to baseline our current SDL maturity and measure onward improvements. Importantly, we are able to easily demonstrate our current capability level vis-à-vis industry standards and provide compelling business cases for our future investment portfolio."
+text: "When it came to evaluating product development environments, HP’s scale and density presented a tough challenge for us. SAMM has proved to be an invaluable tool to baseline our current SDL maturity and measure onward improvements. Importantly, we are able to easily demonstrate our current capability level vis-à-vis industry standards and provide compelling business cases for our future investment portfolio."
 name: "Brian Hanson"
 position: "Senior Security Architect, HP"
 avatar: "img/testimonials/BrianHanson.jpg"
