--- a/Website/data/testimonials/3.yaml
+++ b/Website/data/testimonials/3.yaml
@@ -1,4 +1,4 @@
-text: "UniSystems has integrated the OpenSAMM framework into its certified by ISO 27001:2013 Information Security Management System (ISMS) and adopts it throughout the development lifecycle."
+text: "UniSystems has integrated the SAMM framework into its certified by ISO 27001:2013 Information Security Management System (ISMS) and adopts it throughout the development lifecycle."
 name: "Andreas Athanasoulias"
 position: "Information Security Officer & Services Team Leader, UniSystems S.A."
 avatar: "img/testimonials/Andreas.jpg"
