Adds times to agenda

--- a/Website/data/sud2021a/06_samm_suite.yaml
+++ b/Website/data/sud2021a/06_samm_suite.yaml
@@ -5,4 +5,5 @@ url: "from-samm-project-towards-samm-suite"
 name: "From SAMM Project towards SAMM Suite"
 type: "Presentation"
 presenter: "Daniel Kefer"
+time: "16.00"
 
