--- a/Website/data/sud2021a/01_samm_update.yaml
+++ b/Website/data/sud2021a/01_samm_update.yaml
@@ -5,4 +5,5 @@ url: "samm-update"
 name: "OWASP SAMM Update"
 type: "Presentation"
 presenter: "Bart De Win and Sebastien Deleersnyder"
+time: "14.00"
 
