--- a/Website/data/sud2021a/02_samm_dsomm.yaml
+++ b/Website/data/sud2021a/02_samm_dsomm.yaml
@@ -5,4 +5,5 @@ url: "strategic-usage-of-samm-and-dsomm"
 name: "Strategic Usage of OWASP SAMM and OWASP DSOMM"
 type: "Presentation"
 presenter: "Timo Pagel"
+time: "14.25"
 
