--- a/Website/data/sud2021a/04_scope_in_samm_assessment.yaml
+++ b/Website/data/sud2021a/04_scope_in_samm_assessment.yaml
@@ -5,4 +5,5 @@ url: "organizational-scope-of-an-owasp-samm-assessment"
 name: "What should be the organizational scope of an OWASP SAMM assessment?"
 type: "Workshop"
 presenter: "Carsten Huth"
+time: "15.00"
 
